--- a/tp/src/styles/section2.css
+++ b/tp/src/styles/section2.css
@@ -1,12 +1,27 @@
 #section2{
-    background-color: rgb(56, 51, 51);
+    background-color: black;
+    height: 100vh;
 }
-
-#img-container{
-    height: 40vh;
-    width: 30vw;
+#text{
+    display: flex;
+    flex-direction: column;
+    height: 25vh;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content: center;
+}
+#img-container-2{
+    margin-top: 5vh;
+    height: 60vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     img{
-        width: 100%;
-        height: 100%;
+        position: relative;
+       
+        width: 80%;
+        height: 80%;
     }
 }
