--- a/tp/src/styles/header.css
+++ b/tp/src/styles/header.css
@@ -1,5 +1,5 @@
 header {
-    background-color: rgb(63, 60, 60);
+    background-color: #171717;
     position: sticky;
     height: 10vh;
     width: 100vw;
@@ -22,13 +22,13 @@ header {
                 font-size: larger;
                 text-decoration: none;
                 font-style: none;
-                color: rgb(0, 0, 0);
+                color: #b3b3b3;
                 font-weight: 600;
                 border-radius:5%;
-                background: rgb(216, 215, 215);
+                
                 &:hover{
-                    background: rgb(255, 255, 255);
-                    color: rgb(0, 0, 0);
+                     color: #f5e559;
+            text-shadow: #000000 1.2px 0px 3px;
                 }
             }
         }
