--- a/tp/src/styles/section1.css
+++ b/tp/src/styles/section1.css
@@ -3,7 +3,8 @@
     width: 100vw;
     margin: 0;
     padding: 0;
-    background-color: rgb(41, 58, 58);
+   
+    background: linear-gradient( rgba(57, 65, 65, 0.8), rgba(0, 0, 0, 0.8));
     display: flex;
     
     div{
