--- a/tp/src/styles/section1.css
+++ b/tp/src/styles/section1.css
@@ -1,23 +1,25 @@
-#section1{
+#section1 {
     height: 90vh;
     width: 100vw;
     margin: 0;
     padding: 0;
-   
-    background: linear-gradient( rgba(57, 65, 65, 0.8), rgba(0, 0, 0, 0.8));
+
+    background: linear-gradient(rgba(57, 65, 65, 0.8), rgba(0, 0, 0, 0.8));
     display: flex;
-    
-    div{
+
+    div {
         position: relative;
-    left: 10%;
-    top: 27%;
-        h1{
-        padding: 0;
-        margin: 0;
-        width: max-content;
-        line-height: 1rem;
-    }
-        h4{
+        left: 10%;
+        top: 27%;
+
+        h1 {
+            padding: 0;
+            margin: 0;
+            width: max-content;
+            line-height: 1rem;
+        }
+
+        h4 {
             padding: 5px;
             margin: 5px;
             color: rgb(192, 192, 191);
@@ -26,7 +28,8 @@
             left: 2%;
             margin-top: 1.5vh;
         }
-        p{
+
+        p {
             position: relative;
             left: 5%;
             padding: 0;
@@ -34,20 +37,58 @@
             width: 30vw;
             line-height: 1.5rem;
         }
-        a{
+
+        a {
             text-decoration: none;
             color: rgb(255, 255, 255);
             font-weight: 600;
-            &:hover{
+
+            &:hover {
                 color: rgb(255, 255, 255);
                 text-decoration: underline;
             }
         }
     }
 
-    
+
 }
 
-#img-container{
+#img-container {
     padding-left: 18%;
 }
+
+@media screen and (max-width: 600px) {
+
+    #section1 {
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h1 {
+            position: relative;
+            left: 23px;
+            width: max-content;
+            justify-content: center;
+
+            line-height: 1rem;
+        }
+
+        p{
+            
+        }
+
+        #img-container {
+            padding-left: 0;
+            display: none;
+        }
+
+        div {
+            position: relative;
+            left: 0;
+            top: 0;
+            text-align: center;
+        }
+    }}
