--- a/tp/src/styles/footer.css
+++ b/tp/src/styles/footer.css
@@ -8,12 +8,11 @@
         padding: 0;
     }
 }
-.logoContainer{    width: 10%;
-}
+
 #cont{
       padding: 10px;
     display: flex;
-    width: 60%;
+    width: 100%;
     justify-content: center;
     align-items:self-start;
     a{
@@ -35,4 +34,22 @@
     align-items: center;
     line-height: 1.8rem;
 
+}
+
+@media screen and (max-width: 600px) {
+    #footer{
+        height: 55vh;
+    }
+    #cont{
+        padding: 0;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2vh;
+        width: 100%;
+        height: 100%;
+    }
+    a{
+        font-size: 0.7rem;
+    }
 }
