--- a/tp/src/styles/section2.css
+++ b/tp/src/styles/section2.css
@@ -1,4 +1,5 @@
-#section2{
+ @media screen and (min-width: 601px) {   
+ #section2{
     background-color: black;
     height: 100vh;
 }
@@ -24,4 +25,39 @@
         width: 80%;
         height: 80%;
     }
+} 
+ }
+@media screen and (max-width: 600px) {    
+#section2{
+    background-color: black;
+    height: 100vh;
+
 }
+#text{
+    display: flex;
+    flex-direction: column;
+    height: 50vh;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content: center;
+    h1{
+        margin-bottom: 2vh;
+    }
+}
+
+#img-container-2{
+    margin-top: 7vh;
+    height: 60vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    img{
+        position: relative;
+       
+        width: 90%;
+        height: 40%;
+    }
+
+
+}}
