--- a/tp/src/styles/section3.css
+++ b/tp/src/styles/section3.css
@@ -1,3 +1,6 @@
+@media screen and (min-width: 600px) {  
+    
+
 #section3 {
     background-color: #000000;
     color: #ffffff;
@@ -97,4 +100,101 @@ p {
     font-size: 0.9rem;
     font-weight: 300;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+}
+@media screen and (max-width: 600px) {  
+    #section3Header {
+    position: relative;
+    top: 2%;
+
+    left: 15vw;
+    width: 70vw;
+
+    h1 {
+        text-align: center;
+        margin-bottom: 10%;
+        color: #f5e559;
+        font-size: 2rem;
+        line-height: 1rem;
+        font-weight: 700;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+    font-size: 1rem;
+}
+#section3 {
+    background-color: #000000;
+    color: #ffffff;
+    border-top: #ffffff21 solid 5px;
+    height:
+        110vh;
+
+    * {
+        margin: 0;
+        padding: 0;
+    }
+}
+
+#caracteristicas {
+    position: relative;
+    color: #f8e53c;
+   
+    top: 10vh;
+    width: 100vw;
+     text-shadow: #000000 1.2px 0px 3px;
+    display: grid;
+    gap:1rem;
+    text-align: center;
+    grid-template-areas: "so"
+        "cpu"
+        "gpu"
+        "ram"
+        "ssd"
+        "hola";
+
+    
+    div{
+        color: black;
+        background: radial-gradient(circle at 50% 70%, rgba(255, 255, 255, 0.247), #000000 80%);
+        p{
+            font-size: 1.5rem;
+        }
+    }
+}
+#so {
+    grid-area: so;
+}
+
+#cpu {
+    grid-area: cpu;
+}
+
+#gpu {
+    grid-area: gpu;
+}
+
+#ram {
+    grid-area: ram;
+}
+
+#ssd {
+    grid-area: ssd;
+}
+
+#hola {
+    grid-area: hola;
+}
+
+.big {
+    color: #f5e559;
+    font-size: 2.5rem;
+    font-weight: 700;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.small {
+    color: #ffffff;
+    font-size: 0.9rem;
+    font-weight: 300;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 }
